# semiconductor_sim

./: .coveragerc  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SECURITY_SCANNING.md  add_notebook_badges.py  asv.conf.json  bandit.yaml  codecov.yml  demo_acceleration.py  mkdocs.yml  mkdocs_basic.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  verify_installation.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-drafter.yml
.venv_test/: pyvenv.cfg
benchmarks/: __init__.py  bench_devices.py  bench_models.py  iv_computations.py
docs/: api.md  changelog.md  examples.md  gallery.md  getting-started.md  glossary.md  index.md  interactivity.md  materials.md  parasitics_and_temperature.md  roadmap.md  schemas_and_presets.md  troubleshooting.md
examples/: app_interactive.py  cli_demo.sh  example_bjt.py  example_led.py  example_led_3d_interactive.ipynb  example_led_interactive.ipynb  example_materials_effects.py  example_materials_effects_plot.py  example_mos_capacitor.py  example_mos_capacitor_interactive.ipynb  example_pn_junction.py  example_schottky_diode.py  example_solar_cell.py  example_tunnel_diode.py  example_tunnel_diode_3d_interactive.ipynb  example_varactor_diode.py  example_zener_diode.py  example_zener_diode_interactive.ipynb  schemas_and_presets_demo.py  train_ml_model_zener.py  training_data_zener.py
scripts/: generate_gallery_images.py
semiconductor_sim/: __init__.py  py.typed
tests/: TESTING.md  conftest.py  test_auger_recombination.py  test_bjt.py  test_cli.py  test_golden_reference.py  (+14 more)
(+266 files in other folders)
